--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -26,16 +26,20 @@ workflows:
         script: |
           ICON_PATH="../public/icon.png" # path to your single icon PNG in repo
           ANDROID_RES="android/app/src/main/res"
-          for DIR in mdpi hdpi xhdpi xxhdpi xxxhdpi; do
-            mkdir -p "$ANDROID_RES/mipmap-$DIR"
-            convert "$ICON_PATH" -resize $(case $DIR in \
-              mdpi)48x48;; \
-              hdpi)72x72;; \
-              xhdpi)96x96;; \
-              xxhdpi)144x144;; \
-              xxxhdpi)192x192;; \
-            esac) "$ANDROID_RES/mipmap-$DIR/ic_launcher.png"
-          done
+          
+          # Create mipmap folders if they don't exist
+          mkdir -p "$ANDROID_RES/mipmap-mdpi"
+          mkdir -p "$ANDROID_RES/mipmap-hdpi"
+          mkdir -p "$ANDROID_RES/mipmap-xhdpi"
+          mkdir -p "$ANDROID_RES/mipmap-xxhdpi"
+          mkdir -p "$ANDROID_RES/mipmap-xxxhdpi"
+          
+          # Resize and copy icon to each folder
+          convert "$ICON_PATH" -resize 48x48 "$ANDROID_RES/mipmap-mdpi/ic_launcher.png"
+          convert "$ICON_PATH" -resize 72x72 "$ANDROID_RES/mipmap-hdpi/ic_launcher.png"
+          convert "$ICON_PATH" -resize 96x96 "$ANDROID_RES/mipmap-xhdpi/ic_launcher.png"
+          convert "$ICON_PATH" -resize 144x144 "$ANDROID_RES/mipmap-xxhdpi/ic_launcher.png"
+          convert "$ICON_PATH" -resize 192x192 "$ANDROID_RES/mipmap-xxxhdpi/ic_launcher.png"
 
       - name: Build Android DEBUG APK
         script: |
